# DRL_unity

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cyclonedds_config.xml  docker-compose.yml  generate_custom_frame.py  install-unity-editor.sh  sync-patches.sh  test_collision.py  test_lidar.py
AutoDRIVE-Devkit-patches/autodrive_hunter_se/: package.xml  setup.py
AutoDRIVE-Devkit-patches/autodrive_hunter_se/launch/: simulator_bringup_rviz.launch.py
AutoDRIVE-Devkit/ADSS Toolkit/autodrive_matlab/: README.md
AutoDRIVE-Devkit/ADSS Toolkit/autodrive_simulink/: README.md
AutoDRIVE-Simulator-patches/Assets/Scenes/: Hunter SE - CBF.unity  Hunter SE - Data Collection.unity  Hunter SE - Greensward - SRS.unity  Hunter SE.unity  (+7 more)
AutoDRIVE-Simulator-patches/ProjectSettings/: ProjectSettings.asset
hunter_se_drl/: README.md
hunter_se_drl/config/: README.md  env_config.yaml  train_ppo_config.yaml  train_sac_config.yaml
hunter_se_drl/deploy/: README.md  run_real_robot.py
hunter_se_drl/envs/: README.md  hunter_se_env.py
hunter_se_drl/models/: README.md  custom_policy.py
hunter_se_drl/test/: README.md  test_agent.py
hunter_se_drl/train/: README.md  train_ppo.py  train_sac.py
hunter_se_drl/utils/: README.md  file_manager.py  lidar_utils.py  train_logger.py
ros2_ws/src/drl_agent/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/drl_agent/config/: environment.yaml  hyperparameters_a3c.yaml  hyperparameters_sac.yaml  hyperparameters_tqc.yaml  hyperparameters_tqc_ieqn.yaml  test_tqc_config.yaml  train_a3c_config.yaml  train_config.yaml  train_sac_config.yaml  train_tqc_config.yaml  train_tqc_ieqn_config.yaml
ros2_ws/src/drl_agent/launch/: test_tqc.launch.py
ros2_ws/src/drl_agent/scripts/environment/: environment.py  environment_360.py
ros2_ws/src/drl_agent/scripts/policy/: a3c_agent.py  sac_agent.py  test_tqc_agent.py  tqc_agent.py  tqc_ieqn_agent.py  train_a3c_agent.py  train_sac_agent.py  train_td7_agent.py  train_tqc_agent.py  train_tqc_ieqn_agent.py
ros2_ws/src/hunter_se_drl/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/hunter_se_drl/config/: README.md  environment.yaml  hyperparameters_sac.yaml  hyperparameters_tqc.yaml  test_config.yaml  train_sac_config.yaml  train_tqc_config.yaml
ros2_ws/src/hunter_se_drl/launch/: README.md  test.launch.py  train_sac.launch.py  train_tqc.launch.py
ros2_ws/src/hunter_se_drl/scripts/environment/: README.md  autodrive_env.py  env_interface.py
ros2_ws/src/hunter_se_drl/scripts/policy/: README.md  buffer.py  sac_agent.py  tqc_agent.py  train_sac.py  train_tqc.py
ros2_ws/src/hunter_se_drl/scripts/utils/: README.md  file_manager.py  reward.py
simulation/: README.md
(+87 files in other folders)
