<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>autodrive_hunter_se</name>
  <version>0.1.0</version>
  <description>AutoDRIVE Ecosystem ROS 2 Package for AgileX Hunter SE</description>

  <maintainer email="sangukbae@example.com">SangukBae</maintainer>

  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- pip 의존성 (rosdep 미지원, 수동 설치 필요): gevent geventwebsocket python-socketio -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
